##################################################################
#
# uEcho for C
#
# Copyright (C) Satoshi Konno 2015
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

if UNITTESTS
SUBDIRS = include lib tests examples
else
SUBDIRS = include lib examples
endif
