##################################################################
#
# uEcho for C
#
# Copyright (C) Satoshi Konno 2015
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

SUBDIRS = include lib

if UECHO_ENABLE_EXAMPLES
SUBDIRS += examples
endif

if UECHO_ENABLE_TEST
SUBDIRS += test
endif
