##################################################################
#
# uEcho for C
#
# Copyright (C) The uecho Authors 2015
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

uechoheaders = \
	./uecho/profile.h \
	./uecho/esv.h \
	./uecho/device.h \
	./uecho/util/timer.h \
	./uecho/util/log.h \
	./uecho/util/bytes.h \
	./uecho/misc.h \
	./uecho/message.h \
	./uecho/node.h \
	./uecho/std/database.h \
	./uecho/uecho.h \
	./uecho/controller.h \
	./uecho/class.h \
	./uecho/object.h \
	./uecho/property.h \
	./uecho/const.h \
	./uecho/typedef.h \
	./uecho/manufacture.h

nobase_include_HEADERS = \
	$(uechoheaders)
