##################################################################
#
# uEcho for C
#
# Copyright (C) The uecho Authors 2015
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

uechoheaders = \
	./uecho/misc.h \
	./uecho/node.h \
	./uecho/device.h \
	./uecho/typedef.h \
	./uecho/const.h \
	./uecho/property.h \
	./uecho/uecho.h \
	./uecho/object.h \
	./uecho/controller.h \
	./uecho/message.h \
	./uecho/manufacture.h \
	./uecho/util/log.h \
	./uecho/util/timer.h \
	./uecho/util/bytes.h \
	./uecho/class.h \
	./uecho/profile.h \
	./uecho/std/database.h \
	./uecho/esv.h

nobase_include_HEADERS = \
	$(uechoheaders)
