##################################################################
#
# uEcho for C
#
# Copyright (C) The uecho Authors 2015
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

uechoheaders = \
	./uecho/typedef.h \
	./uecho/property.h \
	./uecho/object.h \
	./uecho/class.h \
	./uecho/esv.h \
	./uecho/const.h \
	./uecho/std/database.h \
	./uecho/profile.h \
	./uecho/device.h \
	./uecho/controller.h \
	./uecho/util/timer.h \
	./uecho/util/log.h \
	./uecho/util/bytes.h \
	./uecho/misc.h \
	./uecho/message.h \
	./uecho/node.h \
	./uecho/uecho.h \
	./uecho/manufacture.h

nobase_include_HEADERS = \
	$(uechoheaders)
