# CMakeLists.txt for uEcho ESP32 component

idf_component_register(SRCS "socket.c" "interface.c" "interface_function.c" "thread.c" "mutex.c" "cond.c"
                    "../../src/uecho/class.c"
                    "../../src/uecho/class_list.c"
                    "../../src/uecho/controller.c"
                    "../../src/uecho/controller_listener.c"
                    "../../src/uecho/device.c"
                    "../../src/uecho/esv.c"
                    "../../src/uecho/frame/mcast_server.c"
                    "../../src/uecho/frame/mcast_server_list.c"
                    "../../src/uecho/frame/message_observer.c"
                    "../../src/uecho/frame/message_observer_list.c"
                    "../../src/uecho/frame/message_observer_manager.c"
                    "../../src/uecho/frame/object_property_observer.c"
                    "../../src/uecho/frame/object_property_observer_list.c"
                    "../../src/uecho/frame/object_property_observer_manager.c"
                    "../../src/uecho/frame/server.c"
                    "../../src/uecho/frame/udp_server.c"
                    "../../src/uecho/frame/udp_server_list.c"
                    "../../src/uecho/manufacture.c"
                    "../../src/uecho/manufacture_list.c"
                    "../../src/uecho/message.c"
                    "../../src/uecho/message_search.c"
                    "../../src/uecho/misc.c"
                    "../../src/uecho/net/datagram_packet.c"
                    "../../src/uecho/net/interface_list.c"
                    "../../src/uecho/node.c"
                    "../../src/uecho/node_list.c"
                    "../../src/uecho/node_listener.c"
                    "../../src/uecho/object.c"
                    "../../src/uecho/object_list.c"
                    "../../src/uecho/property.c"
                    "../../src/uecho/property_enum.c"
                    "../../src/uecho/property_enum_list.c"
                    "../../src/uecho/property_list.c"
                    "../../src/uecho/std/database.c"
                    "../../src/uecho/std/device.c"
                    "../../src/uecho/std/device_super_class.c"
                    "../../src/uecho/std/manufacturers.c"
                    "../../src/uecho/std/node_profile_class.c"
                    "../../src/uecho/std/object_super_class.c"
                    "../../src/uecho/std/objects_mra.c"
                    "../../src/uecho/std/profile.c"
                    "../../src/uecho/std/profile_super_class.c"
                    "../../src/uecho/std/standard.c"
                    "../../src/uecho/util/bytes.c"
                    "../../src/uecho/util/list.c"
                    "../../src/uecho/util/log.c"
                    "../../src/uecho/util/logs.c"
                    "../../src/uecho/util/strings.c"
                    "../../src/uecho/util/strings_function.c"
                    "../../src/uecho/util/strings_tokenizer.c"
                    "../../src/uecho/util/thread_list.c"
                    "../../src/uecho/util/timer.c"
                  INCLUDE_DIRS . ../../include ../../src)
