# Makefile.am for uEcho ESP32 library

# This Makefile is intentionally left mostly empty.
# The build process for the ESP32 is handled by the ESP-IDF build system
# using the CMakeLists.txt file in this directory.
# This file is here to satisfy the Autotools build system when generating
# the main Makefiles.

EXTRA_DIST = CMakeLists.txt socket.c interface.c interface_function.c thread.c mutex.c cond.c
